# number-recognition

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.run/: Backend (Uvicorn).run.xml
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  channels.py  health.py  plate_lists.py  recognitions.py  webhooks.py
app/core/: config.py
app/db/: session.py
app/models/: channel.py  plate_list.py  plate_list_item.py  recognition.py  user.py  webhook.py
app/schemas/: channel.py  plate_list.py  recognition.py  user.py  webhook.py
app/services/: rules.py  users.py
app/utils/: security.py
app/worker/: pipeline.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: auth.py  channels.py  diagnostics.py  events.py  lists.py  scenarios.py  webhooks.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/db/models/: channel.py  plate_list.py  recognition.py  user.py  webhook.py
backend/app/monitoring/: metrics.py
backend/app/schemas/: channel.py  plate_list.py  recognition.py  scenario.py  webhook.py
backend/app/services/: channel_service.py  list_service.py  pipeline.py  recognition_service.py  scenario_service.py  webhook_service.py
backend/app/utils/: logging.py
backend/tests/: test_health.py
docs/: architecture.md
frontend/: index.html  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: DashboardPage.tsx  DiagnosticsPage.tsx  EventsPage.tsx  ListsPage.tsx  SearchPage.tsx  (+1 more)
ops/: prometheus.yml
